# necro-net

./: .gitignore  README.md  evaluation.py  pyproject.toml  pyproject_gpu.toml  sync_env.sh
ResNet50/: config.json  evaluate.py  help.md  prostate_gleason_trainer.py  prostate_resnet50_trainer.py  train_classify.py
ResNet50/raj_data_paad/: config.json  model_parameters.md  paad_confusion_matrix.py  paad_cvt_ts.py  paad_resnet50_trainer.py  train_classify.py
ResNet50/raj_data_paad/tools/: convert_to_onnx.py  convert_to_torchscript.py
ResNet50/tools/: convert_to_onnx.py  convert_to_torchscript.py
ResNet50/utils/: data_loader.py  dataset.py  training.py
ViT/: convert_to_torchscript.py  eval_raj_vit.py  evaluation.py  raj_dataset.py  train_raj_vit.py
helpers/: cuda_info.py  disk_info.sh  gpu_info.sh  system_info.py  torch_info.py
